2004-09-20
	* Numbers_Words: Version 0.10.0 released.
	* Words/lang.dk.php: New language file: dk for Danish (Author: Jesper Veggerby)

2004-08-26
	* Numbers_Words: Version 0.9.0 released.
	* Words/lang.hu_HU.php: New language file: hu_HU for Hungarian (Author: Nils Homp)
	* Words/lang.id.php: Updating author list of the Indonesian translation (Arif Rifai Dwiyanto translated
	into Indonesian first but I missed his file by mistake).

2004-08-09
	* Numbers_Words: Version 0.8.1 released.
	* Words/lang.ru.php: fixed two bugs (missing t in 400, and wrong function call) in Russian translation (thanks
	to Anton Funk and igorag for reporting, and Andrey Demenev for fixing)

2004-06-17
	* Numbers_Words: Version 0.8 released.
	* Words/lang.lt.php: New file for Lithuanian language.
	* Words.php: Fixed a class method finding (should work for PHP5 and PHP4 now)

2004-05-25
	* Numbers_Words: Version 0.7.1 released.
	* Words.php: Small fix for PHP 5 support (toWords instead of towords) (Thanks to khlo for bug report).

2004-04-28
	* Numbers_Words: Version 0.7 released.
        * Words/lang.fr.php, Words/lang.bg.php: small fix of minus sign (Kouber Saparev)
	* Words/lang.sv.pl: New language file: sv for Swedish (Author: Robin Ericsson)

2004-04-27
	* Numbers_Words: Version 0.6 released.

2004-04-17
	* Words/lang.ru.php: New language file: ru for Russian (Author: Andrey Demenev)

2004-03-25
	* Words/lang.id.php: New language file: id for Indonesian (Author: Ernas M. Jamil)

2004-03-02
	* Words/lang.es_AR.php: New language file: es_AR for Argentinian Spanish (Author: Martin Marrese)

2003-12-16
	* Numbers_Words: Version 0.5.1 release.
	* Words/lang.fr.php: Small fix to French translation.

2003-12-16
	* Numbers_Words: Version 0.5 release.
	* Words/lang.en_US.php: toCurrency() method for spelling given amount of money.

2003-12-11
	* Words/lang.fr.php: New language file: fr for French (Author: Kouber Saparev)

2003-11-21